fixed the wrong filename

--- a/MASH-dev/DavidSmith/MBITES-Supplement/MBITES-Supplement.tex
+++ b/MASH-dev/DavidSmith/MBITES-Supplement/MBITES-Supplement.tex
@@ -459,7 +459,7 @@ Mosquito dispersal occurs as the result of a search bout, called by the function
 When \verb1surviveFlight()1 is called, a random number is drawn
 to determine whether the mosquito survived the stress associated
 with flight. The function is called from {\bf
-MBITES-GenericSurvival.R} and at the moment, it looks like this: 
+MBITES-Generic-Survival.R} and at the moment, it looks like this: 
 %
 \begin{Schunk}
 \begin{Sinput}
